<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home_icon"
        android:title="Home"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/registerMenu"
        android:icon="@drawable/ic_register_icon"
        android:title="@string/register"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/loginMenu"
        android:icon="@drawable/ic_login_icon"
        android:title="@string/login"
        app:showAsAction="never"/>

    <item android:id="@+id/aboutFragment"
        android:icon="@drawable/ic_login_icon"
        android:title="@string/emsys"
        app:showAsAction="never">

        <menu>
            <item android:id="@+id/aboutEmSys"
                android:title="@string/about"
                app:showAsAction="never"/>

            <item android:id="@+id/careerEmSys"
                android:title="@string/career"
                app:showAsAction="never"/>

            <item android:id="@+id/userDataEmSys"
                android:title="@string/user_data"
                app:showAsAction="never"/>
        </menu>
    </item>
</menu>